--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jinx-vue-pwa",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "author": "Derek Williams",
+  "description": "Jinx! - Can you say what I say?",
+  "homepage": "http://github.com/derekwlms/jinx-vue-pwa/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,8 +13,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "firebase": "^5.6.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "popper.js": "^1.14.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-chat-scroll": "^1.3.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
