--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,65 @@
 {
-  "name": "jinx-vue-pwa",
-  "short_name": "jinx-vue-pwa",
+  "name": "Jinx! - Say the Same Thing",
+  "short_name": "Jinx!",
+  "theme_color": "darkblue",
+  "background_color": "white",
+  "display": "standalone",
+  "orientation": "portrait",
+  "Scope": "/",
+  "start_url": "./index.html",
   "icons": [
     {
-      "src": "./img/icons/android-chrome-192x192.png",
+      "src": "./images/icons/jinx-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
+      "src": "./images/icons/jinx-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "./images/icons/jinx-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
-    }
+    },
+    {
+      "src": "./images/icons/android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": "0.75"
+     },
+     {
+      "src": "./images/icons/android-icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": "1.0"
+     }
   ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "splash_pages": null
 }
