--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-chat-scroll": "^1.3.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.5.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
