--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.6.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.6",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
